--- a/thankyou.html
+++ b/thankyou.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!--  Navbar -->
+  <!-- Navbar -->
   <div class="nav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -17,18 +17,16 @@
     <a href="quote.html">Quote</a>
     <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
-
-
   </div>
 
-  <!--  Thank You Content -->
+  <!-- Thank You Content -->
   <div class="content" style="text-align: center;">
-    <h2> Thank You!</h2>
+    <h2>✅ Thank You!</h2>
     <p>Your message has been sent successfully.<br>We’ll get back to you as soon as possible.</p>
-    <a href="index.html" class="quote-btn">Back to Home</a>
+    <a href="index.html" class="quote-btn">⬅ Back to Home</a>
   </div>
 
-  <!--  WhatsApp Floating Button -->
+  <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/27798645761" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
     <i class="fab fa-whatsapp"></i>
   </a>
