--- a/quote.html
+++ b/quote.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!--  Navigation -->
+  <!-- Navigation -->
   <div class="nav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -17,11 +17,9 @@
     <a href="quote.html">Quote</a>
     <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
-
-
   </div>
 
-  <!--  Quote Form -->
+  <!-- Quote Form -->
   <div class="content">
     <h1>Request a Free Quote</h1>
     <p>Tell us what you need, and we’ll get back to you with a personalized quote.</p>
@@ -49,21 +47,21 @@
 
       <textarea name="details" rows="5" required placeholder="Describe your project..."></textarea>
 
-      <!--  Hidden config -->
+      <!-- Hidden config -->
       <input type="hidden" name="_subject" value="New Quote Request via BalanceIT">
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="thankyou.html">
+      <input type="hidden" name="_next" value="https://www.balanceit.africa/thankyou.html">
 
       <button type="submit">Submit Quote</button>
     </form>
   </div>
 
-  <!--  WhatsApp Floating Button -->
+  <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/27798645761" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
     <i class="fab fa-whatsapp"></i>
   </a>
 
-  <!--  Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
       <div class="footer-social">
