--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!--  Navigation -->
+  <!-- Navigation -->
   <div class="nav">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -17,11 +17,9 @@
     <a href="quote.html">Quote</a>
     <a href="contact.html">Contact</a>
     <a href="blog.html">Blog</a>
-
-
   </div>
 
-  <!--  Contact Form -->
+  <!-- Contact Form -->
   <div class="content">
     <h1>Contact Us</h1>
     <p>Have a question, idea, or want to work with us? We'd love to hear from you.</p>
@@ -29,24 +27,24 @@
     <form action="https://formsubmit.co/info@balanceit.africa" method="POST">
       <input type="text" name="name" required placeholder="Your Name">
       <input type="email" name="email" required placeholder="Your Email">
-      <input type="text" name="phone" placeholder="Phone Number ">
+      <input type="text" name="phone" placeholder="Phone Number">
       <textarea name="message" rows="5" required placeholder="Your Message"></textarea>
 
       <!-- Hidden Fields -->
       <input type="hidden" name="_subject" value="New Contact Message from BalanceIT">
-      <input type="hidden" name="_next" value="thankyou.html">
       <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://www.balanceit.africa/thankyou.html">
 
       <button type="submit">Send Message</button>
     </form>
   </div>
 
-  <!--  WhatsApp Floating Button -->
+  <!-- WhatsApp Floating Button -->
   <a href="https://wa.me/27798645761" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
     <i class="fab fa-whatsapp"></i>
   </a>
 
-  <!--  Footer -->
+  <!-- Footer -->
   <footer class="footer">
     <div class="footer-container">
 
