--- a/blog.html
+++ b/blog.html
@@ -28,14 +28,14 @@
       Balance I.T is your smart tech solution — tailored to your needs.
     </p>
 
-    <h2>🔧 What We Offer</h2>
+    <h2> What We Offer</h2>
     <ul>
       <li><strong>Custom App Design</strong> – We shape apps that simplify performance and boost user experience.</li>
       <li><strong>Flexible Website Development</strong> – Build a powerful online presence with responsive, device-friendly websites.</li>
       <li><strong>Reliable Hosting Solutions</strong> – Keep your website online and secure with our trusted hosting services.</li>
     </ul>
 
-    <h2>🎯 Our Mission</h2>
+    <h2> Our Mission</h2>
     <p>
       Our goal is to be your trusted I.T partner — one that provides solutions that fuel your growth and productivity.
       We blend technology expertise with a focus on your unique goals, helping you <strong>balance tech with business success</strong>.
