--- a/faq.html
+++ b/faq.html
@@ -32,14 +32,14 @@ specifically for businesses.</p>
       <h3> How much do your services cost?</h3>
       <p>Project time-periods differ. Standard websites can be accomplished in a few days, whereas apps and
 detailed systems can take up to a week or longer. If need be, we can advance a timeline after assessing
-your needs.<a href="quote.html" class="quote-btn">Quote Page</a>.</p>
+your needs.</a></p>
 
       <h3> How long does a website or app project take?</h3>
       <p>Most certainly! We can upgrade or migrate your current site for a cut above performance and design.</p>
 
       <h3> Can you update or redesign my existing website?</h3>
       <p>We offer manageable pricing based on the range of your project. You can request access to a quotation
-through our (q. page…)</p>
+through our <a href="quote.html" class="quote-btn">Quote Page</p>
 
       <h3> How do I get support?</h3>
 <p>
