--- a/faq.html
+++ b/faq.html
@@ -38,8 +38,9 @@ your needs.</p>
       <p>Most certainly! We can upgrade or migrate your current site for a cut above performance and design.</p>
 
       <h3> Can you update or redesign my existing website?</h3>
-      <p>We offer manageable pricing based on the range of your project. You can request access to a quotation
-through our <a href="quote.html" class="quote-btn"></a>>Quote Page</p>
+<p>We offer manageable pricing based on the range of your project. You can request a quotation through our 
+  <a href="quote.html" class="quote-btn">Quote Page</a></p>
+
 
       <h3> How do I get support?</h3>
 <p>
