--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   <section class="content">
     <h2>Who We Are</h2>
     <p>
-      BalanceIT is a digital solutions agency based in Pretoria. We specialize in custom website design, mobile app development,
-      business branding, hosting, and online presence services for individuals, startups, and growing businesses across South Africa.
+      BalanceIT is a digital solutions organization based in Pretoria. We specialize in custom website design, mobile app development,
+      business branding, hosting, and online presence. At Balance IT, we take pride and diligence in providing the best digital resolutions for start-up enterprises, individuals and businesses that are developing across South Africa
     </p>
   </section>
 
