--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 
     <h2>Meet the Team</h2>
     <div class="team">
-      <div class="team-member"><strong>Bongani Malinga.</strong><br>Business Operations</div>
-      <div class="team-member"><strong>Masego Mogomotse.</strong><br>Digital Strategist</div>
-      <div class="team-member"><strong>Mbuso Ngobese.</strong><br>Full Stack Developer</div>
+      <div class="team-member"><strong>Bongani Malinga</strong><br>Business Operations</div>
+      <div class="team-member"><strong>Masego Mogomotse</strong><br>Digital Strategist</div>
+      <div class="team-member"><strong>Mbuso Ngobese</strong><br>Full Stack Developer</div>
     </div>
   </div>
 </body>
