--- a/quote.html
+++ b/quote.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="BalanceIT is a South African software company offering web design, mobile app development, hosting, and branding services.">
+<meta name="keywords" content="BalanceIT, software company, web development, app development, hosting, branding, Pretoria, South Africa">
+<meta name="author" content="BalanceIT">
+<meta name="robots" content="index, follow">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Request a Quote - BalanceIT</title>
