--- a/services.html
+++ b/services.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="description" content="BalanceIT is a South African software company offering web design, mobile app development, hosting, and branding services.">
+<meta name="keywords" content="BalanceIT, software company, web development, app development, hosting, branding, Pretoria, South Africa">
+<meta name="author" content="BalanceIT">
+<meta name="robots" content="index, follow">
+
   <title>Our Services - BalanceIT</title>
   <link rel="stylesheet" href="style.css">
     <!-- Font Awesome CDN -->
