--- a/services.html
+++ b/services.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="description" content="BalanceIT is a South African software company offering web design, mobile app development, hosting, and branding services.">
+  <title>Our Services - BalanceIT</title>
+  <!--SEO Meta Tags -->
+  <meta name="description" content="BalanceIT is a digital solutions agency based in Pretoria. We specialize in custom website design, mobile app development, business branding, hosting, and online presence services for individuals, startups, and growing businesses across South Africa."/>
 <meta name="keywords" content="BalanceIT, software company, web development, app development, hosting, branding, Pretoria, South Africa">
 <meta name="author" content="BalanceIT">
 <meta name="robots" content="index, follow">
+<meta name=property="og:url" content="https://www.balanceit.africa"/>
 
-  <title>Our Services - BalanceIT</title>
   <link rel="stylesheet" href="style.css">
     <!-- Font Awesome CDN -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
